Support Minecraft 1.20.x and 1.21.x versions, refactor code for Adventure API, modernize dependencies, and update Gradle to 8.10.
- Added explicit support for Minecraft versions 1.20.x and 1.21.x in `Version.java`.
- Refactored text handling to use the Kyori Adventure library (`TextUtils`).
- Replaced usage of deprecated `displayName` and `lore` with their Adventure API equivalents.
- Improved code readability with modern Java features like enhanced `try` blocks and local variable inference.
- Updated the Gradle Wrapper to version 8.10.
- Simplified configuration and enums for better flexibility (e.g., replaced outdated mapping methods and removed unused getters).
- Optimized command execution logic using `CommandActionParser`.
- Cleaned up legacy code and streamlined button logic to enhance overall functionality.