@@ -2,10 +2,8 @@ package me.m0dii.onlineplayersgui.inventoryholder;
 
 import me.m0dii.onlineplayersgui.CustomItem;
 import me.m0dii.onlineplayersgui.OnlineGUI;
-import me.m0dii.onlineplayersgui.utils.ConditionalConfig;
-import me.m0dii.onlineplayersgui.utils.Messenger;
-import me.m0dii.onlineplayersgui.utils.Utils;
-import me.m0dii.onlineplayersgui.utils.VersionUtils;
+import me.m0dii.onlineplayersgui.utils.*;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -14,15 +12,16 @@ import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
     private Inventory inv;
-    private final String name;
+    private final Component name;
     private final int size, page;
     private final OnlineGUI plugin;
 
@@ -30,7 +29,7 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
 
     private final ConditionalConfig cfg;
 
-    public ConditionalGUIInventory(OnlineGUI plugin, String name, int page, ConditionalConfig cfg) {
+    public ConditionalGUIInventory(@NotNull OnlineGUI plugin, @NotNull Component name, int page, @NotNull ConditionalConfig cfg) {
         this.size = adjustSize();
 
         this.cfg = cfg;
@@ -42,11 +41,12 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
 
         this.condition = this.cfg.getCondition();
 
-        this.inv = Bukkit.createInventory(this, this.size, Utils.format(this.cfg.getGuiTitle()));
+        this.inv = Bukkit.createInventory(this, this.size, this.cfg.getGuiTitle());
 
         initByPage(page);
     }
 
+    @Override
     public void execute(Player clickee, ItemStack clicked, ClickType clickType, int slot) {
         if (clicked == null) {
             return;
@@ -54,7 +54,7 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
 
         Material type = clicked.getType();
 
-        if (type.equals(cfg.getDisplay().getType())) {
+        if (type.equals(cfg.getPlayerHeadDisplay().getType())) {
             Player skullOwner = VersionUtils.getSkullOwner(clicked);
 
             if (skullOwner == null) {
@@ -64,18 +64,18 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
             List<String> cmds = new ArrayList<>();
 
             if (clickType.equals(ClickType.LEFT)) {
-                cmds = this.cfg.getLeftClickCmds();
+                cmds = this.cfg.getLeftClickCommands();
             }
 
             if (clickType.equals(ClickType.MIDDLE)) {
-                cmds = this.cfg.getMiddleClickCmds();
+                cmds = this.cfg.getMiddleClickCommands();
             }
 
             if (clickType.equals(ClickType.RIGHT)) {
-                cmds = this.cfg.getRightClickCmds();
+                cmds = this.cfg.getRightClickCommands();
             }
 
-            cmds.forEach(cmd -> Utils.sendCommand(clickee, skullOwner, cmd));
+            CommandActionParser.parse(clickee, skullOwner, cmds);
         }
 
         if (type.equals(this.cfg.getPrevPageMat()) || type.equals(this.cfg.getNextPageMat())) {
@@ -83,8 +83,7 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
 
             if (cfg.getNextPageSlot() == slot) {
                 nextPage = page + 1;
-            }
-            else if (cfg.getPrevPageSlot() == slot) {
+            } else if (cfg.getPrevPageSlot() == slot) {
                 nextPage = page - 1;
             }
 
@@ -94,8 +93,7 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
                 if (newinv.hasPlayers()) {
                     clickee.openInventory(newinv.getInventory());
                 }
-            }
-            catch (IndexOutOfBoundsException ex) {
+            } catch (IndexOutOfBoundsException ex) {
                 Messenger.debug("IndexOutOfBoundsException: " + ex.getMessage());
             }
         }
@@ -109,20 +107,21 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
         List<String> cicmds = new ArrayList<>();
 
         if (clickType.equals(ClickType.LEFT)) {
-            cicmds = c.getLCC();
+            cicmds = c.getLcc();
         }
 
         if (clickType.equals(ClickType.MIDDLE)) {
-            cicmds = c.getMCC();
+            cicmds = c.getMcc();
         }
 
         if (clickType.equals(ClickType.RIGHT)) {
-            cicmds = c.getRCC();
+            cicmds = c.getRcc();
         }
 
-        cicmds.forEach(cmd -> Utils.sendCommand(clickee, clickee, cmd));
+        CommandActionParser.parse(clickee, clickee, cicmds);
     }
 
+    @Override
     public void refresh(Player p) {
         this.inv = Bukkit.createInventory(this, this.size, this.name);
 
@@ -141,23 +140,21 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
     }
 
     private int adjustSize() {
-        int size = cfg.getGuiSize();
+        int guiSize = cfg.getGuiSize();
 
-        if (size < 18) {
+        if (guiSize < 18) {
             return 18;
-        }
-        else if (size > 54) {
+        } else if (guiSize > 54) {
             return 54;
-        }
-        else if (size % 9 == 0) {
-            return size;
+        } else if (guiSize % 9 == 0) {
+            return guiSize;
         }
 
         return 54;
     }
 
     @Override
-    public Inventory getInventory() {
+    public @NotNull Inventory getInventory() {
         return inv;
     }
 
@@ -203,43 +200,34 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
         List<Player> byPage = getByPage(page);
 
         for (Player player : byPage) {
-            ItemStack head = VersionUtils.getSkull(player, cfg.getHeadLore(), cfg.getHeadText());
+            ItemStack head = VersionUtils.getSkull(player, cfg.getHeadLore(), cfg.getHeadName());
 
-            for (int i = 0; i < inv.getSize(); i++) {
-                if (inv.getItem(i) == null) {
-                    if (cfg.getNextPageSlot() != i && cfg.getPrevPageSlot() != i) {
-                        inv.setItem(i, head);
-                        break;
-                    }
-                }
-            }
+            IntStream.range(0, inv.getSize())
+                    .filter(i -> inv.getItem(i) == null)
+                    .filter(i -> cfg.getNextPageSlot() != i && cfg.getPrevPageSlot() != i)
+                    .findFirst()
+                    .ifPresent(i -> inv.setItem(i, head));
         }
 
         setButtons();
     }
 
     public boolean hasPlayers() {
-        return getByPage(page).size() != 0;
+        return !getByPage(page).isEmpty();
     }
 
     public boolean hasPlayers(int offset) {
-        return getByPage(page + offset).size() != 0;
+        return !getByPage(page + offset).isEmpty();
     }
 
     private void setButtons() {
-        boolean show = plugin.getCfg().areButtonsAlwaysOn();
+        boolean show = plugin.getCfg().isButtonsAlwaysVisible();
 
-        if (show) {
-            setNextButton();
-        }
-        else if (hasPlayers(1)) {
+        if (show || hasPlayers(1)) {
             setNextButton();
         }
 
-        if (show) {
-            setPreviousButton();
-        }
-        else if (page != 0) {
+        if (show || page != 0) {
             setPreviousButton();
         }
     }
@@ -248,11 +236,13 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
         ItemStack nextButton = new ItemStack(cfg.getNextPageMat());
         ItemMeta nextButtonMeta = nextButton.getItemMeta();
 
-        List<String> nextLore =
-                cfg.getNextPageLore().stream().map(str -> Utils.setPlaceholders(str, null)).collect(Collectors.toList());
+        List<Component> nextLore = cfg.getNextPageLore().stream()
+                .map(str -> Utils.setPlaceholders(str, null))
+                .map(TextUtils::kyorify)
+                .toList();
 
-        nextButtonMeta.setLore(nextLore);
-        nextButtonMeta.setDisplayName(Utils.format(cfg.getNextPageName()));
+        nextButtonMeta.lore(nextLore);
+        nextButtonMeta.displayName(cfg.getNextPageName());
         nextButton.setItemMeta(nextButtonMeta);
 
         inv.setItem(cfg.getNextPageSlot(), nextButton);
@@ -262,11 +252,13 @@ public class ConditionalGUIInventory implements InventoryHolder, CustomGUI {
         ItemStack prevButton = new ItemStack(cfg.getPrevPageMat());
         ItemMeta prevButtonMeta = prevButton.getItemMeta();
 
-        List<String> prevLore =
-                cfg.getPrevPageLore().stream().map(str -> Utils.setPlaceholders(str, null)).collect(Collectors.toList());
+        List<Component> prevLore = cfg.getPrevPageLore().stream()
+                .map(str -> Utils.setPlaceholders(str, null))
+                .map(TextUtils::kyorify)
+                .toList();
 
-        prevButtonMeta.setLore(prevLore);
-        prevButtonMeta.setDisplayName(Utils.format(cfg.getPrevPageName()));
+        prevButtonMeta.lore(prevLore);
+        prevButtonMeta.displayName(cfg.getPrevPageName());
         prevButton.setItemMeta(prevButtonMeta);
 
         inv.setItem(cfg.getPrevPageSlot(), prevButton);
