@@ -1,6 +1,7 @@
 package me.m0dii.onlineplayersgui.utils;
 
 import me.m0dii.onlineplayersgui.OnlineGUI;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -8,9 +9,12 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class VersionUtils {
+    private VersionUtils() {
+        // Utility class, no instantiation needed
+    }
+
     public static Player getSkullOwner(ItemStack item) {
         SkullMeta sm = (SkullMeta) item.getItemMeta();
 
@@ -28,24 +32,26 @@ public class VersionUtils {
         }
 
         if (skullOwner == null) {
-            skullOwner = Bukkit.getPlayer(Utils.clearFormat(item.getItemMeta().getDisplayName()));
+            skullOwner = Bukkit.getPlayer(TextUtils.stripColor(item.getItemMeta().displayName()));
         }
 
         return skullOwner;
     }
 
     public static ItemStack getSkull(Player player, List<String> lore, String name) {
-        ItemStack head = OnlineGUI.getInstance().getCfg().getDisplay();
+        ItemStack head = OnlineGUI.getInstance().getCfg().getPlayerHeadDisplay();
 
         ItemMeta meta = head.getItemMeta();
 
-        lore = lore.stream().map(str -> Utils.setPlaceholders(str, player)).collect(Collectors.toList());
+        List<Component> newLore = lore.stream()
+                .map(str -> Utils.setPlaceholders(str, player))
+                .map(TextUtils::kyorify)
+                .toList();
 
-        meta.setDisplayName(Utils.setPlaceholders(name, player));
-        meta.setLore(lore);
+        meta.displayName(TextUtils.kyorify(Utils.setPlaceholders(name, player)));
+        meta.lore(newLore);
 
-        if (meta instanceof SkullMeta) {
-            SkullMeta sm = (SkullMeta) meta;
+        if (meta instanceof SkullMeta sm) {
 
             if (Version.getServerVersion(Bukkit.getServer()).isNewerThan(Version.v1_12_R1)) {
                 sm.setOwningPlayer(player);
